implemented single Ingredient update.