@@ -8,60 +8,56 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
-@Controller
 @Slf4j
+@Controller
 public class RecipeController {
+
     private final RecipeService recipeService;
 
     public RecipeController(RecipeService recipeService) {
         this.recipeService = recipeService;
     }
 
-    @RequestMapping({"/recipe/{id}/show"})
-    public String getRecipeById(@PathVariable String id, Model model) {
+    @GetMapping
+    @RequestMapping("/recipe/{id}/show")
+    public String showById(@PathVariable String id, Model model){
 
-        model.addAttribute("recipe", recipeService.getRecipeById(new Long(id)));
-
+        model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
         return "recipe/show";
     }
 
     @GetMapping
     @RequestMapping("recipe/new")
-    public String getNewRecipe(Model model){
+    public String newRecipe(Model model){
+        model.addAttribute("recipe", new RecipeCommand());
 
-        model.addAttribute("recipe",new RecipeCommand());
-
-        return "/recipe/recipeform";
-    }
-
-    @GetMapping
-    @RequestMapping({"/recipe/{id}/update"})
-    public String updateRecipe(@PathVariable  String id , Model model){
-        model.addAttribute("recipe", recipeService.findCommandById(Long.valueOf(id)));
         return "recipe/recipeform";
     }
 
+    @GetMapping
+    @RequestMapping("recipe/{id}/update")
+    public String updateRecipe(@PathVariable String id, Model model){
 
-    @PostMapping
-    @RequestMapping("recipe")
-    public String saveOrUpdate(@ModelAttribute RecipeCommand command) {
-        if (command.getId() == null) {
-            return "redirect:/";
-        }
+        model.addAttribute("recipe", recipeService.findCommandById(Long.valueOf(id)));
+
+        return  "recipe/recipeform";
+    }
+
+    @PostMapping("recipe")
+    public String saveOrUpdate(@ModelAttribute RecipeCommand command){
+
         RecipeCommand savedCommand = recipeService.saveRecipeCommand(command);
-
-        log.debug("Recipe " + command.getDescription() + " created with ID " + command.getId());
 
         return "redirect:/recipe/" + savedCommand.getId() + "/show";
     }
 
     @GetMapping
-    @RequestMapping("/recipe/{id}/delete")
-    public String deleteById(@PathVariable String id) {
+    @RequestMapping("recipe/{id}/delete")
+    public String deleteById(@PathVariable String id){
+
+        log.debug("Deleting id: " + id);
 
         recipeService.deleteById(Long.valueOf(id));
-        log.debug("Deleting  Recipe: " + id);
-
         return "redirect:/";
     }
 }
